# BookBoss

./: .dockerignore  .envrc  .gitignore  .justfile  .renovaterc.json5  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.sops.env
.backlog/: bug-bad-log-enrich-book-files-job.md  bug-delete-genre-no-enrichment.md  bug-genre-delete.md  bug-only-delete-terminal-import-jobs.md  epic-domain-event-bus.md  epic-virtual-library.md  feature-bookdrop-duplicate-removal.md  feature-genre-tags-settings.md  feature-koreader-sync.md  feature-replace-cover.md  feature-shelf-rule.md  spec-virtual-library.md
.cargo/: config.toml
.claude/: CLAUDE.md  Database.md  issueboss.json  settings.json
.claude/projects/-Users-scotte-Development-Projects-BookBoss/memory/: project_format_service_refactor.md
.config/: mise.toml
.github/workflows/: pages.yaml  release.yaml  renovate.yaml
.tokensave/: config.json
crates/api/: Cargo.toml  build.rs
crates/api/src/: error.rs  grpc.rs  lib.rs
crates/api/src/grpc/: error.rs  system.rs
crates/bookboss/: Cargo.toml
crates/bookboss/src/: commands.rs  config.rs  logging.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  repository.rs  resilience.rs  test_support.rs
crates/core/src/app_setting/: mod.rs  model.rs  repository.rs  service.rs
crates/core/src/auth/: service.rs
crates/core/src/book/: fingerprint.rs  mod.rs  model.rs  service.rs
crates/core/src/collection/: mod.rs  model.rs  repository.rs  service.rs
crates/core/src/conversion/: mod.rs  service.rs
crates/core/src/device/: mod.rs  model.rs  service.rs
crates/core/src/download/: handler.rs  mod.rs  model.rs  provider.rs  source_service.rs
crates/core/src/event/: mod.rs  model.rs  service.rs
crates/core/src/filter/: mod.rs  model.rs
crates/core/src/format/: handler.rs  mobi_handler.rs  mod.rs  model.rs  service.rs
crates/core/src/health/: mod.rs  service.rs  subsystem.rs  task.rs  tasks.rs
crates/core/src/import/: handler.rs  mod.rs  model.rs  scanner.rs  service.rs
crates/core/src/jobs/: handler.rs  mod.rs  registry.rs  repository.rs  service.rs  sweep.rs  worker.rs
crates/core/src/koreader/: mod.rs  model.rs  repository.rs  service.rs
crates/core/src/message/: mod.rs  model.rs  repository.rs  service.rs
crates/core/src/metadata/: mod.rs  service.rs
crates/core/src/opds/: mod.rs  service.rs
crates/core/src/pipeline/: mod.rs  model.rs  service.rs
crates/core/src/reading/: mod.rs  service.rs
crates/core/src/shelf/: mod.rs  model.rs  service.rs
crates/core/src/storage/: mod.rs  model.rs  store.rs
crates/core/src/types/: capability.rs
crates/database/: Cargo.toml
crates/database/src/: error.rs  filter.rs  lib.rs  repository.rs  sort.rs  transaction.rs
crates/database/src/adapters/: app_setting.rs  author.rs  book.rs  collection.rs  device.rs  genre.rs  import_job.rs  job.rs  koreader_document_hash.rs  library.rs  mod.rs  publisher.rs  series.rs  session.rs  shelf.rs  system_message.rs  tag.rs  user.rs  user_book_metadata.rs  user_settings.rs
crates/database/src/entities/: app_settings.rs  authors.rs  book_files.rs  books.rs  device_books.rs  device_sync_log.rs  devices.rs  genres.rs  import_jobs.rs  jobs.rs  koreader_document_hashes.rs  libraries.rs  library_books.rs  mod.rs  prelude.rs  publishers.rs  series.rs  shelves.rs  system_messages.rs  tags.rs  user_book_metadata.rs  user_libraries.rs  users.rs
crates/database/src/migrations/: m20260225_000001_create_users_table.rs  m20260225_000002_create_sessions_table.rs  m20260228_000003_create_user_settings_table.rs  m20260302_000004_create_authors_table.rs  m20260302_000005_create_series_table.rs  m20260302_000006_create_publishers_table.rs  m20260302_000007_create_genres_table.rs  m20260302_000008_create_tags_table.rs  m20260302_000009_create_books_table.rs  m20260302_000010_create_book_authors_table.rs  m20260302_000011_create_book_genres_table.rs  m20260302_000012_create_book_tags_table.rs  m20260302_000013_create_book_identifiers_table.rs  m20260302_000014_create_book_files_table.rs  m20260302_000015_create_user_book_metadata_table.rs  m20260302_000016_create_devices_table.rs  m20260302_000017_create_device_books_table.rs  m20260302_000018_create_device_sync_log_table.rs  m20260303_000019_create_shelves_table.rs  m20260303_000020_create_book_shelves_table.rs  m20260303_000021_create_import_jobs_table.rs  m20260305_000022_create_jobs_table.rs  m20260315_000023_alter_device_books.rs  m20260315_000024_alter_device_books_file_role.rs  m20260321_000023_add_sort_indexes.rs  m20260322_000024_create_system_messages_table.rs  m20260322_000025_add_created_at_to_book_files.rs  (+18 more)
crates/download/: Cargo.toml
crates/download/src/: annas_archive.rs  lib.rs
crates/formats/: Cargo.toml
crates/formats/src/: conversion.rs  enrich_handler.rs  epub.rs  epub_enrich.rs  error.rs  format_service.rs  kepub_convert.rs  kepub_handler.rs  lib.rs  mobi_convert.rs  test_support.rs
crates/frontend/: Cargo.toml
crates/frontend/assets/: input.css
crates/frontend/src/: lib.rs  password.rs  settings.rs
crates/import/: Cargo.toml
crates/import/src/: handler.rs  lib.rs  scanner.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: book.rs  context.rs  device.rs  fixtures.rs  import_job.rs  library.rs  main.rs  mariadb.rs  mysql.rs  pipeline.rs  postgres.rs  reading.rs  shelf.rs  sqlite.rs  user.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  local.rs
crates/utils/: Cargo.toml
crates/utils/src/: date.rs  hash.rs  language.rs  lib.rs  similarity.rs  string.rs  token.rs
deploy/: docker-compose-mysql.yaml  docker-compose-postgres.yaml  docker-compose-sqlite.yaml
docs/src/: SUMMARY.md  index.md
docs/src/contributing/: architecture.md  commands.md  conventions.md  database.md  frontend.md  setup.md
docs/src/user/: configuration.md  database.md  getting-started.md  installation.md  kobo.md  koreader.md  libraries.md  managing-library.md  opds.md  shelves.md  sso.md
scripts/: release.sh
(+133 files in other folders)
