[workspace]
resolver = "3"
members = ["crates/bookboss", "crates/integration-tests"]

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
description = "Take control of your digital library"
readme = "README.md"
repository = "https://github.com/szinn/BookBoss"
license = "MIT"

[workspace.dependencies]
bb-api = { path = "crates/api" }
bb-core = { path = "crates/core" }
bb-database = { path = "crates/database" }
bb-formats = { path = "crates/formats" }
bb-frontend = { path = "crates/frontend" }
bb-import = { path = "crates/import" }
bb-metadata = { path = "crates/metadata" }
bb-storage = { path = "crates/storage" }
bb-utils = { path = "crates/utils" }

testcontainers = "0.27.1"
mockall = "0.14.0"

anyhow = "1.0.102"
image = "0.25.10"
mimalloc = "0.1.48"
base64 = "0.22.1"
async-trait = "0.1.89"
axum = "0.8.8"
config = "0.15.22"
derive_builder = "0.20.2"
log = "0.4.29"
prost = "0.14.3"
prost-types = "0.14.3"
quick-xml = "0.39.2"
rand = "0.10.0"
serde_json = "1.0.149"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio-graceful-shutdown = "0.19.2"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
tonic-reflection = "0.14.5"
tower = "0.5.3"
tracing-log = "0.2.0"
wiremock = "0.6.5"
zip = "8.3.0"

[workspace.dependencies.argon2]
version = "0.5.3"
features = ["std"]

[workspace.dependencies.axum_session]
version = "0.19.0"
default-features = false

[workspace.dependencies.axum_session_auth]
version = "0.19.0"
default-features = false

[workspace.dependencies.chrono]
version = "0.4.44"
features = ["serde"]

[workspace.dependencies.clap]
version = "4.6.0"
features = ["cargo", "derive", "env"]

[workspace.dependencies.dioxus-server]
version = "0.7.3"
features = ["router"]

[workspace.dependencies.dioxus]
version = "0.7.3"
features = ["fullstack", "router"]

[workspace.dependencies.hyper]
version = "1.8.1"
features = ["full"]

[workspace.dependencies.hyper-util]
version = "0.1.20"
features = ["tokio", "server-auto", "http1"]

[workspace.dependencies.insta]
version = "1.46.3"
features = ["filters"]

[workspace.dependencies.reqwest]
version = "0.13.2"
default-features = false
features = ["json", "rustls", "gzip"]

[workspace.dependencies.rust_decimal]
version = "1.40.0"
features = ["serde-str"]

[workspace.dependencies.sea-orm]
version = "2.0.0-rc.37"
features = [
    "debug-print",
    "postgres-array",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
    "sqlx-mysql",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-uuid",
]

[workspace.dependencies.sea-orm-migration]
version = "2.0.0-rc.37"
features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-uuid",
]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.50.0"
default-features = false
features = ["full"]

[workspace.dependencies.tokio-util]
version = "0.7.18"
default-features = false
features = ["rt"]

[workspace.dependencies.tonic]
version = "0.14.5"
features = ["tls-native-roots", "tls-ring"]

[workspace.dependencies.tower-http]
version = "0.6.8"
features = ["limit", "request-id", "trace"]

[workspace.dependencies.tracing]
version = "0.1.44"
features = ["log"]

[workspace.dependencies.testcontainers-modules]
version = "0.15.0"
features = ["postgres", "mariadb", "mysql"]

[workspace.dependencies.tracing-subscriber]
version = "0.3.23"
features = ["std", "fmt", "registry", "env-filter", "json"]

[workspace.lints.rust]
unsafe_code = "forbid"
ambiguous_negative_literals = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"

# Opt-outs
missing_debug_implementations = "allow" # Don't warn about this

[workspace.lints.clippy]
# Lint categories (priority = -1 allows specific overrides below)
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Previously explicit lints (now covered by categories above, kept for clarity)
borrow_as_ptr = "warn"
cast_lossless = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
needless_for_each = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
unnecessary_literal_bound = "warn"
use_self = "warn"
useless_conversion = "warn"

# Opt-outs
redundant_feature_names = "allow" # "test-support" is established convention across all crates
struct_field_names = "allow"      # test mock naming (_result suffix) is a legitimate convention
too_many_lines = "allow"          # subjective; doesn't indicate correctness issues
doc_markdown = "allow"            # overzealous about backtick formatting in docs
items_after_statements = "allow"  # fires on `use` blocks inside match arms / closures
map_err_ignore = "allow"          # intentional in server fns that must not leak internal errors

# Restriction lints
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

# Opt-outs
cargo_common_metadata = "allow"               # App-only crates; readme/keywords/categories not needed
default_trait_access = "allow"                # `Default::default()` is fine when type is clear from context
enum_variant_names = "allow"                  # Route enums intentionally share a common suffix
literal_string_with_formatting_args = "allow" # Conflicts with structured logging message templates
multiple_crate_versions = "allow"             # Dependency resolution — not always in our control
suspicious_else_formatting = "allow"          # Dioxus RSX `class: if cond { ... } else { ... }` is idiomatic
unused_async = "allow"                        # Required for Dioxus endpoints
unused_trait_names = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
must_use_candidate = "allow"
too_many_arguments = "allow"

# Pending Review
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package]
# Insta suggests compiling these packages in opt mode for faster testing.
# See https://docs.rs/insta/latest/insta/#optional-faster-runs.
insta.opt-level = 3
similar.opt-level = 3
# Proptest suggests compiling itself and its RNG in opt mode as well.
# See https://proptest-rs.github.io/proptest/proptest/tips-and-best-practices.html#setting-opt-level
# proptest.opt-level = 3
# proptest-state-machine.opt-level = 3
# rand_chacha.opt-level = 3

[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = "debuginfo"
codegen-units = 1
